--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	  <version>1</version>
   </parent>
   <scm>
-  	<connection>scm:git:ssh//250101.vserver.de/var/spool/git/commontypes</connection>
-  	<developerConnection>scm:git:ssh//250101.vserver.de/var/spool/git/commontypes</developerConnection>
+  	<connection>scm:git:ssh://250101.vserver.de/var/spool/git/commontypes</connection>
+  	<developerConnection>scm:git:ssh://250101.vserver.de/var/spool/git/commontypes</developerConnection>
   </scm>  	<dependencies>
 		<dependency>
 			<groupId>joda-time</groupId>
