--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
 	<groupId>de.gzockoll</groupId>
 	<artifactId>commontypes</artifactId>
 	<name>Common Types</name>
-	<version>0.0.1-SNAPSHOT</version>
   <parent>
-	  <groupId>de.gzockoll</groupId>
-	  <artifactId>pom-master</artifactId>
-	  <version>1</version>
+	  <groupId>de.gzockoll.osgi</groupId>
+	  <artifactId>OsgiParent</artifactId>
+	  <version>0.0.1-SNAPSHOT</version>
   </parent>
   <scm>
   	<connection>scm:git:ssh://250101.vserver.de/var/spool/git/commontypes</connection>
@@ -17,7 +16,7 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>1.6.1</version>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 </project>
